GUI, new remoteFilesTree sending method